# sudoku-ai

./: .gitignore  ACTION_PLAN.md  CLEANUP_COMPLETE.md  CODE_CLEANUP_SUMMARY.md  COMPLETE_OPTIMIZATION_REPORT.md  CRITICAL_FIX_VECTORIZATION.md  FIX_TARGET_INDEXING.md  LEGACY_DECISION.md  NEURAL_SOLVER_GUIDE.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_IMPROVEMENTS.md  PRODUCTION_TRAINING_IMPROVEMENTS.md  QUICKSTART_PRODUCTION.md  QUICK_START_NEURAL.md  README.md  READY_TO_TRAIN.md  RESTRUCTURING_SUMMARY.md  SPEED_OPTIMIZATION_COMPLETE.md  TRAINING_ANALYSIS_SUMMARY.md  TRAINING_COMPARISON.md  TRAINING_GUIDE.md  TRAINING_MONITORING.md  pyproject.toml  requirements.txt
checkpoints/: policy.pt
cli/: main.py
configs/: inference.yaml  model.yaml  training.yaml
docs/: ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DIAGRAMS.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README_GNN.md  design.md
examples/: puzzles_sample.txt  test.sdk
notebooks/: kaggle_hf_publish.ipynb
scripts/: evaluate.py  solve.py  train.py  train_gnn_complete.py  train_production.py
src/: __init__.py
src/core/: __init__.py  board.py  validator.py
src/data/: __init__.py  dataset.py
src/inference/: __init__.py  hybrid_solver.py  neural_solver.py
src/models/: __init__.py
src/models/gnn/: __init__.py  encoding.py  graph_builder.py  message_passing.py  sudoku_gnn.py
src/training/: __init__.py  loss.py  trainer.py  trainer_production.py
src/utils/: __init__.py  logger.py  metrics.py
sudoku_ai/: __init__.py  data.py  logger_config.py  policy.py
sudoku_engine/: parser.py  validator.py
sudoku_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sudoku_solvers/: __init__.py  backtracking.py  cpsat.py  dlx.py  heuristics.py  sat_adapter.py
tests/: __init__.py  test_board.py  test_cli.py  test_engine.py  test_heuristics.py  test_integration.py  test_parser.py  test_policy.py  test_sat_parity.py  test_solvers.py  test_trace.py  test_validator.py
ui/: tui.py
