[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-ai"
version = "1.0.0"
description = "Production-grade AI-powered Sudoku solver using neural networks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sudoku AI Team" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "rich>=13.7",
  "torch>=2.0",
]

[project.scripts]
sudoku = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sudoku_engine*", "sudoku_ai*", "cli*", "ui*"]

[tool.setuptools.package-data]
"sudoku" = ["examples/*"]
